app/components/SnippetList/snippetlist.module.css
.deleteAlert {
	margin-bottom: 0.625rem;
	user-select: none; /* Standard syntax */
	transition: all 0.25s ease;
}

.alertInfo {
	display: flex;
	flex-direction: row;
	justify-content: space-between;
	user-select: none; /* Standard syntax */
}

.alertIcons {
	margin-left: 0.625rem;
	cursor: pointer;
	user-select: none; /* Standard syntax */
}

.alertCheckIcon {
	margin-right: 0.323rem;
	color: var(--dark-green-color);
	user-select: none; /* Standard syntax */
}

.alertCrossIcon {
	margin-right: 0;
	color: var(--red-color);
	user-select: none; /* Standard syntax */
}

.alertShow {
	opacity: 1;
	visibility: visible;
	height: auto;
}

.alertHide {
	opacity: 0;
	visibility: hidden;
	height: 0;
}

.snippetsListContainer {
	display: block;
	width: 100%;
	background: var(--bg-color-dark);
	max-width: 23.75rem;
	border-right: 1px solid var(--border-color);
	height: 100vh;
	transition:
		width 0.12s,
		max-width 0.12s,
		visibility 0.14s;
}

.fields {
	display: flex;
	flex-flow: row nowrap;
	justify-content: space-between;
	align-items: center;
	border-bottom: 1px solid var(--border-color);
	height: 3.2rem;
}

.addButton {
	margin: 0 0.625rem 0 0;
	cursor: pointer;
	color: var(--gray-color);
	transition: all 0.25s ease;
}

.addButton:hover {
	color: var(--cyan-color);
}

.snippetsList {
	display: flex;
	flex-direction: column;
	height: calc(100vh - 80px);
	padding: 10px 10px 0;
	overflow-y: auto;
	user-select: none;
}

.snippetsList::-webkit-scrollbar {
	width: 10px;
}

/* Track */
.snippetsList::-webkit-scrollbar-track {
	background: var(--bg-color);
}

/* Handle */
.snippetsList::-webkit-scrollbar-thumb {
	background: var(--current-line);
}

/* Handle on hover */
.snippetsList::-webkit-scrollbar-thumb:hover {
	background: var(--current-line);
}

.snippetItem {
	color: var(--gray-color);
	cursor: pointer;
	display: flex;
	width: calc(100% - 1.25rem);
	align-items: center;
	border-bottom: 1px solid var(--border-color);
	padding: 0.625rem;
	justify-content: space-between;
	font-size: var(--small-font-size);
}

.snippetItem.active {
	color: var(--foreground-color);
	background: var(--current-line);
	border-radius: var(--border-radius);
}

.snippetDate {
	color: var(--comment-color);
	font-size: var(--tiny-font-size);
}

.noSnippetContainer {
	display: flex;
	justify-content: center;
	align-items: center;
	color: var(--gray-color);
	opacity: 0.4;
	width: 100%;
	height: calc(100% - 160px);
}

.noSnippet {
	font-size: var(--small-font-size);
}

.searchIcon {
	fill: currentcolor;
	color: var(--gray-color);
}

.itemLeftSide {
	display: flex;
	align-items: center;
}

.trashIcon,
.restoreIcon,
.listIcon {
	margin-right: 0.313rem;
}

.trashIcon:hover {
	color: var(--red-color);
}

.restoreIcon:hover {
	color: var(--green-color);
}

@media (width < 1140px) {
	.snippetsListContainer {
		height: calc(100vh - 3.2rem);
		position: absolute;
		top: 0;
		left: 0;
		z-index: 3;
	}

	.mobileListOpen {
		max-width: 50%;
		visibility: visible;
	}

	.mobileListClosed {
		max-width: 0;
		visibility: hidden;
	}

	.mobileListClosed .section {
		display: none;
	}

	.mobileListOpen .section {
		display: block;
	}
}

@media (width <= 480px) {
	max-width: inherit;
	height: auto;
	width: 100%;
}

